# setup

./: Cargo.toml  LICENSE  docker-compose.yml  fonts.sh  gtk-3.css  setup.sh  terminator-config.toml
src/: main.rs
src/config/: .tmux.conf  .zshrc  alacritty.toml  defaults.rs  mod.rs
src/installers/: alacritty.rs  apt.rs  mod.rs  rust.rs
src/utils/: cli.rs  mod.rs  security.rs  system.rs
