[package]
name = "setup"
version = "0.1.0"
edition = "2024"
authors = ["pycub <iamsokhandan@gmail.com>"]
description = "Interactive CLI for setting up my Ubuntu development environment"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
which = "5.0"
log = "0.4"
env_logger = "0.10"
rpassword = "7.0"